--- a/css/theme-teal.css
+++ b/css/theme-teal.css
@@ -24,8 +24,10 @@
 .w3-theme {color:#fff !important; background-color:#0D6D62 !important}
 .w3-text-theme {color:#0D6D62 !important}
 .w3-border-theme {border-color:#0D6D62 !important}
-.w3-accordion-theme {color: #FFF !important; background-color:#2D4E8B !important}
-.w3-navbar-theme {color: #FFF !important; background-color: #002824 !important; margin-bottom: 10px;}
+/*.w3-accordion-theme {color: #FFF !important; background-color:#2D4E8B !important}*/
+.w3-accordion-theme {color: #FFF !important; background-color:#208278 !important}
+/*.w3-navbar-theme {color: #FFF !important; background-color: #002824 !important; margin-bottom: 10px;}*/
+.w3-navbar-theme {color: #FFF !important; background-color: #183874 !important; margin-bottom: 10px;}
 .w3-hover-theme:hover {color:#fff !important; background-color:#0D6D62 !important}
 .w3-hover-text-theme:hover {color:#0D6D62 !important}
 .w3-hover-border-theme:hover {border-color:#0D6D62 !important}
