--- a/css/theme-colors.css
+++ b/css/theme-colors.css
@@ -16,7 +16,7 @@
 .w3-theme {color:#fff !important; background-color:#495D63 !important}
 .w3-footer, .w3-navbar-theme {
     color:#fff !important; 
-    background-image:linear-gradient(#94B3AE,#7CA29C) !important;
+    background-image:linear-gradient(#94B3AE,#576E75) !important;
 }
 .w3-header {
     background-image: linear-gradient(#344246,#68848D);
@@ -24,7 +24,10 @@
 }
 .w3-text-theme {color:#495D63 !important}
 .w3-border-theme {border-color:#7CA29C !important}
-.w3-accordion-theme {color: #FFF !important; background-color:#576E75 !important; border-bottom: 1px solid #1c3a37}
+.w3-accordion-theme {
+    color: #FFF !important; 
+    background-image: linear-gradient( #828799,#626880) !important; 
+    border-bottom: 1px solid #1c3a37}
 .w3-navbar-theme {margin-bottom: 10px;}
 .w3-hover-theme:hover {color:#fff !important; background-color:#576E75 !important}
 .w3-hover-text-theme:hover {color:#576E75 !important}
