--- a/css/theme-colors.css
+++ b/css/theme-colors.css
@@ -1,44 +1,36 @@
-.w3-theme-l5 {color:#000 !important; background-color:#ABC4C0 !important}
-.w3-theme-l4 {color:#000 !important; background-color:#A0BBB7 !important}
-.w3-theme-l3 {color:#000 !important; background-color:#94B3AE !important}
-.w3-theme-l2 {color:#000 !important; background-color:#88AAA5 !important}
-.w3-theme-l1 {color:#fff !important; background-color:#7CA29C !important}
-.w3-theme-d1 {color:#fff !important; background-color:#576E75 !important}
-.w3-theme-d2 {color:#fff !important; background-color:#495D63 !important}
-.w3-theme-d3 {color:#fff !important; background-color:#45585E !important}
-.w3-theme-d4 {color:#fff !important; background-color:#3D4D52 !important}
-.w3-theme-d5 {color:#fff !important; background-color:#344246 !important}
+.w3-theme-l5 {color:#000 !important; background-color:#eff1fb !important}
+.w3-theme-l4 {color:#000 !important; background-color:#bfc6ee !important}
+.w3-theme-l3 {color:#000 !important; background-color:#9ea9e5 !important}
+.w3-theme-l2 {color:#000 !important; background-color:#7e8cdd !important}
+.w3-theme-l1 {color:#fff !important; background-color:#5e70d4 !important}
 
-.w3-theme-light {color:#000 !important; background-color:#F7F2F5 !important}
-.w3-theme-dark {color:#fff !important; background-color:#3D4D52 !important}
-.w3-theme-action {color:#fff !important; background-color:#3D4D52 !important}
+.w3-theme-d1 {color:#fff !important; background-color:#3e53cc !important}
+.w3-theme-d2 {color:#fff !important; background-color:#2f43b1 !important}
+.w3-theme-d3 {color:#fff !important; background-color:#273791 !important}
+.w3-theme-d4 {color:#fff !important; background-color:#1e2a71 !important}
+.w3-theme-d5 {color:#fff !important; background-color:#151E51 !important}
 
-.w3-theme {color:#fff !important; background-color:#495D63 !important}
+.w3-theme-light {color:#000 !important; background-color:#bfc6ee !important}
+.w3-theme-dark {color:#fff !important; background-color:#1e2a71 !important}
+.w3-theme-action {color:#fff !important; background-color:#1e2a71 !important}
+
+.w3-theme {color:#fff !important; background-color:#1e2a71 !important}
 .w3-footer, .w3-navbar-theme {
     color:#fff !important; 
-    background-image:linear-gradient(#94B3AE,#576E75) !important;
+    background-image:linear-gradient(#3e53cc,#151E51) !important;
 }
 .w3-header {
-    background-image: linear-gradient(#344246,#68848D);
+    background-image: linear-gradient(#151E51,#3e53cc);
     color: #E7EFED;
 }
-.w3-text-theme {color:#495D63 !important}
-.w3-border-theme {border-color:#7CA29C !important}
+.w3-text-theme {color:#151E51 !important}
+.w3-border-theme {border-color:#7e8cdd !important}
 .w3-accordion-theme {
     color: #FFF !important; 
-    background-image: linear-gradient( #828799,#626880) !important; 
-    border-bottom: 1px solid #1c3a37}
+    background-image: linear-gradient( #bfc6ee,#5e70d4) !important; 
+    border-bottom: 1px solid #2F3560}
 .w3-navbar-theme {margin-bottom: 10px;}
-.w3-hover-theme:hover {color:#fff !important; background-color:#576E75 !important}
-.w3-hover-text-theme:hover {color:#576E75 !important}
-.w3-hover-border-theme:hover {border-color:#576E75 !important}
+.w3-hover-theme:hover {color:#fff !important; background-color:#5e70d4 !important}
+.w3-hover-text-theme:hover {color:#5e70d4 !important}
+.w3-hover-border-theme:hover {border-color:#5e70d4 !important}
 
-.highlight {
-    width: 80%;
-    margin: auto;
-    padding: 0 20px;
-    border: 1px solid #3D4D52;
-    background-color: /*#E1D5BB*/ #d6e6e3;
-    border-radius: 20px;
-    text-align: center;
-}
