--- a/css/w3.css
+++ b/css/w3.css
@@ -274,3 +274,4 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 }
 .eprase-image {width: 40%; float: right; margin: 0 0 10px 10px; border: 2px solid #1e2a71;}
 .question {color: #3e53cc; font-style: italic;}
+.home_image {width: 90%; margin: auto;}
