--- a/css/w3.css
+++ b/css/w3.css
@@ -275,3 +275,11 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .eprase-image {width: 40%; float: right; margin: 0 0 10px 10px; border: 2px solid #1e2a71;}
 .question {color: #3e53cc; font-style: italic;}
 .home_image {width: 60%; margin: auto;}
+.go2button {
+    float: right; 
+    margin-right: 20px; 
+    background-color: #bfc6ee;
+    padding: 8px;
+    border-radius: 12px;
+    cursor: pointer;
+}
