--- a/css/w3.css
+++ b/css/w3.css
@@ -259,6 +259,9 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
     float: left;
     margin: 0;
 }
+.eprase-contact a:hover {
+    color: #5e70d4;
+}
 .burger {margin: 10px;}
 .eprase-h1 {color: #1e2a71; margin-left: 5%;}
 .eprase-h2 {color: #3e53cc; font-style: italic; margin-left: 15%}
