--- a/css/w3.css
+++ b/css/w3.css
@@ -280,7 +280,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .home_image {width: 60%; margin: auto;}
 .go2button {
     float: right; 
-    margin-right: 20px; 
+    margin: 10px; 
     background-color: #bfc6ee;
     padding: 8px;
     border-radius: 12px;
