--- a/css/w3.css
+++ b/css/w3.css
@@ -286,3 +286,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
     border-radius: 12px;
     cursor: pointer;
 }
+.go2button:hover {
+    background-color: #5e70d4;
+    color: #bfc6ee;
+}
